# chatdku-agentic-rag

./: .gitignore  README.md  pyproject.toml
data/eval/: llm_eval_configs.example.json  sample_eval.json
results/: empirical_eval.md  local_llm_eval_observed.md
scripts/: ingest.py  run_eval.py  smoke_test.py
src/chatdku_rag/: __init__.py  agent.py  cli.py  dspy_program.py  ingest.py  internet.py  llm.py  models.py  retrievers.py  utils.py
